@@ -1,3 +1,8 @@
+2016-07-19  Jean-Louis Martineau <JMartineau@carbonite.com>
+	* client-src/sendbackup.c: (childstr): check dumppid at last
+	* client-src/sendbackup.c: (check_result):Increase the timeout to 600
+	  seconds
+
 2016-07-18  Jean-Louis Martineau <JMartineau@carbonite.com>
 	* perl/Amanda/Amdump.pm: Use POSIX::close
 	* perl/Amanda/Chunker/Controller.pm, perl/Amanda/Chunker/Scribe.pm:
